<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="show_additional_fields">Show Additional Fields</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone_error">Phone number received from intent is null!</string>
</resources>